# PotatoPy

./: .gitignore  pyproject.toml
potatopy/: __init__.py  auth.py  database.py  models.py
